Fixed Add Book foreign key error. Member Add logic added.

--- a/src/librarymanagement/Member_Add.form
+++ b/src/librarymanagement/Member_Add.form
@@ -209,6 +209,9 @@
               <Font name="Inter" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFieldMemberIDActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -388,7 +391,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="(DD-MM-YYYY)"/>
+            <Property name="text" type="java.lang.String" value="(YYYY-MM-DD)"/>
           </Properties>
         </Component>
       </SubComponents>
