--- a/src/librarymanagement/Member_Modify.form
+++ b/src/librarymanagement/Member_Modify.form
@@ -94,7 +94,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="txtFieldMembershipFee1" min="-2" pref="200" max="-2" attributes="0"/>
+                          <Component id="txtFieldMemberDues" min="-2" pref="200" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="119" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -145,7 +145,7 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtFieldMembershipFee1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtFieldMemberDues" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="checkBoxDuesCleared" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -219,6 +219,9 @@
               <Font name="Inter" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFieldMemberIDActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -401,7 +404,7 @@
             <Property name="text" type="java.lang.String" value="(DD-MM-YYYY)"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtFieldMembershipFee1">
+        <Component class="javax.swing.JTextField" name="txtFieldMemberDues">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter" size="12" style="0"/>
@@ -429,6 +432,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Cleared"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="checkBoxDuesClearedActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
